# rubberband

./: .appveyor.yml  .build.yml  .hgignore  .hgsub  .hgsubstate  .hgtags  .travis.yml  Android.mk  CHANGELOG  CMakeLists.txt  COMPILING.md  CONTRIBUTING.md  Doxyfile  Makefile.in  Makefile.ios  Makefile.macos  Makefile.macos-universal  Makefile.osx  README  README.md  README.txt  TODO  configure  configure.ac  meson.build  meson_options.txt  rubberband-config.cmake.in  rubberband-dll.vcxproj  rubberband-library.vcproj  rubberband-library.vcxproj  rubberband-program.vcproj  rubberband-program.vcxproj  rubberband.pc.in  rubberband.sln
.github/workflows/: build.yml  macos-ios.yml  windows-dotnet.yml  windows.yml
com/breakfastquay/rubberband/: RubberBandStretcher.java
com/breakfastquay/rubberband/test/: RubberBandTest.java
cross/: ios-simulator.txt  ios.txt  macos-arm64.txt  macos-universal.txt  macos-x86_64.txt
dotnet/: rubberband-dll.vcxproj  rubberband-library.vcxproj
ladspa/: RubberBandPitchShifter.cpp  RubberBandPitchShifter.h  libmain.cpp
ladspa-lv2/: RubberBandLivePitchShifter.cpp  RubberBandPitchShifter.cpp  RubberBandPitchShifter.h  RubberBandR3PitchShifter.cpp  RubberBandR3PitchShifter.h  ladspa-rubberband.cat  ladspa-rubberband.rdf  libmain-ladspa.cpp  libmain-lv2.cpp
ladspa-lv2/rubberband.lv2/: lv2-rubberband.ttl  manifest.ttl
main/: main.cpp
misc/: Makefile.osx  ardour2-rubberband-patch
otherbuilds/: Android.mk  Makefile.em  Makefile.in  Makefile.ios  Makefile.linux  Makefile.macos  Makefile.macos-universal  check.sh  rubberband-library.vcxproj
otherbuilds/deploy/: macos.sh  source.sh  win.bat
otherbuilds/docker/: Dockerfile.in
rubberband/: RubberBandLiveShifter.h  RubberBandStretcher.h  TimeStretcher.h  rubberband-c.h  rubberband.h
rubberband-dll/: rubberband-dll.cpp
rubberband-sharp/: Install.ps1  RubberBandNativeMethods.cs  RubberBandNativeMethodsWin32.cs  RubberBandNativeMethodsx64.cs  RubberBandStretcher.cs
single/: RubberBandSingle.cpp
src/: AudioCurve.cpp  AudioCurve.h  ConstantAudioCurve.cpp  ConstantAudioCurve.h  FFT.cpp  FFT.h  HighFrequencyAudioCurve.cpp  HighFrequencyAudioCurve.h  PercussiveAudioCurve.cpp  PercussiveAudioCurve.h  Profiler.h  R3StretcherImpl.h  Resampler.cpp  Resampler.h  RingBuffer.h  RubberBandLiveShifter.cpp  RubberBandStretcher.cpp  Scavenger.h  StretchCalculator.cpp  StretchCalculator.h  StretcherChannelData.cpp  StretcherChannelData.h  StretcherImpl.cpp  StretcherImpl.h  StretcherProcess.cpp  Thread.cpp  Thread.h  Window.h  main.cpp  rubberband-c.cpp  sysutils.cpp  sysutils.h  temporary.cpp
src/audiocurves/: CompoundAudioCurve.cpp  CompoundAudioCurve.h  ConstantAudioCurve.cpp  ConstantAudioCurve.h  HighFrequencyAudioCurve.cpp  HighFrequencyAudioCurve.h  PercussiveAudioCurve.cpp  PercussiveAudioCurve.h  SilentAudioCurve.cpp  SilentAudioCurve.h  SpectralDifferenceAudioCurve.cpp  SpectralDifferenceAudioCurve.h
src/base/: Profiler.cpp  Profiler.h  RingBuffer.h  Scavenger.h
src/bsd-3rdparty/float_cast/: float_cast.h
src/common/: Allocators.h  BQResampler.cpp  BQResampler.h  FFT.cpp  FFT.h  FixedVector.h  HistogramFilter.h  Log.cpp  Log.h  MovingMedian.h  Profiler.cpp  Profiler.h  Resampler.cpp  Resampler.h  RingBuffer.h  SampleFilter.h  Scavenger.h  SingleThreadRingBuffer.h  StretchCalculator.cpp  StretchCalculator.h  Thread.h  VectorOpsComplex.cpp  VectorOpsComplex.h  Window.h  mathmisc.cpp  mathmisc.h  sysutils.cpp  sysutils.h
src/dsp/: AudioCurveCalculator.cpp  AudioCurveCalculator.h  BQResampler.cpp  BQResampler.h  BinClassifier.h  BinSegmenter.h  CompoundAudioCurve.cpp  CompoundAudioCurve.h  ConstantAudioCurve.cpp  ConstantAudioCurve.h  FFT.cpp  FFT.h  HighFrequencyAudioCurve.cpp  HighFrequencyAudioCurve.h  MovingMedian.h  PercussiveAudioCurve.cpp  PercussiveAudioCurve.h  Resampler.cpp  Resampler.h  SampleFilter.h  SilentAudioCurve.cpp  SilentAudioCurve.h  SincWindow.h  SpectralDifferenceAudioCurve.cpp  SpectralDifferenceAudioCurve.h  Window.h
src/faster/: AudioCurveCalculator.h  CompoundAudioCurve.cpp  CompoundAudioCurve.h  HighFrequencyAudioCurve.h  PercussiveAudioCurve.cpp  PercussiveAudioCurve.h  R2Stretcher.cpp  R2Stretcher.h  SilentAudioCurve.h  SincWindow.h  StretchCalculator.cpp  StretcherChannelData.cpp  StretcherChannelData.h  StretcherImpl.cpp  StretcherImpl.h  StretcherProcess.cpp
src/finer/: BinClassifier.h  BinSegmenter.h  Guide.h  Peak.h  PhaseAdvance.h  R3LiveShifter.cpp  R3LiveShifter.h  R3Stretcher.cpp  R3Stretcher.h  R3StretcherImpl.cpp  R3StretcherImpl.h
src/float_cast/: float_cast.h
src/getopt/: getopt.h
src/jni/: RubberBandStretcherJNI.cpp
src/kissfft/: _kiss_fft_guts.h
src/ladspa/: RubberBandPitchShifter.cpp  RubberBandPitchShifter.h  ladspa-rubberband.rdf  libmain.cpp
src/pommier/: sse_mathfun.h
src/speex/: resample.c
src/system/: Allocators.cpp  Allocators.h  Thread.cpp  Thread.h  VectorOps.h  VectorOpsComplex.cpp  VectorOpsComplex.h  sysutils.cpp  sysutils.h
src/test/: TestAllocators.cpp  TestBinClassifier.cpp  TestFFT.cpp  TestLiveShifter.cpp  TestResampler.cpp  TestSignalBits.cpp  TestStretchCalculator.cpp  TestStretcher.cpp  TestVectorOps.cpp  TestVectorOpsComplex.cpp  test.cpp
src/vamp/: RubberBandVampPlugin.cpp
test/latency/: in.flac  measure.cpp  printlatency.cpp  printpeak.cpp  test.sh
vamp/: RubberBandVampPlugin.cpp  RubberBandVampPlugin.h  libmain.cpp
